--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Millner | Woodruff CPAs</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/mw.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css">
@@ -17,11 +18,33 @@
 
 
 
+<div id="mySidenav" class="sidenav" style=" z-index: 999999999">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+    <a  style="color: #ffffff; font-family: Merriweather; font-size: 24px" >Email:</a>
+    <a  href="mailto:cpa@millnerwoodruff.com" style="color: #ffffff; font-family: Merriweather; font-size: 16px" >cpa@millnerwoodruff.com</a>
+    <a  style="color: #ffffff; font-family: Merriweather; font-size: 24px" >Phone:</a>
+    <a  style=" line-height: 36px; color: #ffffff; font-family: Merriweather; letter-spacing: 2px; font-size: 16px">(214)285-1522</a>
+</div>
 
 
 
+<script>
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "100%";
 
-<div class="banner" style="box-shadow: 2.5px 2.5px 5px #666666; z-index: 9999; display: table-cell; vertical-align: middle; text-align: center">
+    }
+
+    /* Close/hide the sidenav */
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+
+    }
+</script>
+
+
+
+<div id ="banner" class="banner" style="box-shadow: 2.5px 2.5px 5px #666666; z-index: 9999; display: table-cell; vertical-align: middle; text-align: center">
 
     <div>
 
@@ -32,14 +55,23 @@
 
 
             </div> -->
+        <!--
         <picture id = "banner-image2"  >
             <source srcset="mobile-banner.png" media="(max-width: 912px)">
             <source srcset="MW-img/Millner-Wooodruff-Banner.png">
             <img id="banner-image" style=" margin-top: 24px; margin-bottom: 2px;  " src="mobile-banner.png" alt="Flowers">
         </picture>
+        -->
             <!--<img id="banner-image" src="MW-img/Millner-Wooodruff-Banner.png" data-min-width-481="medium.png" />-->
 
 
+        <div id="bannerDiv">
+
+            <object id = "banner-image2" data="banner.svg" type="image/svg+xml" style=" margin-top: 24px; margin-bottom: 2px;  text-align: center">
+                <img src="mobile-banner.png" />
+            </object>
+
+        </div>
 
 
     </div>
@@ -58,11 +90,18 @@
     <div>
 
 
-        <div style="margin-top: 4px" class="social">
+        <div id="socialBar" style="margin-top: 4px" class="social">
 
             <a href="https://www.facebook.com/millnerwoodruffCPAs/" id="facebook" class="fa fa-facebook"></a>
             <a href="https://www.linkedin.com/company/millner-woodruff-cpas" id="linkedin" class="fa fa-linkedin"></a>
 
+            <div id="main" style="">
+                <span style="font-size:30px;cursor:pointer" onclick="openNav()">
+
+                    <i class="fa fa-address-book-o" style="position: fixed; left: 15px; top: 240px; font-size:40px;color: white; margin-left: -15px;  padding-top: -50px"></i>
+
+                </span>
+            </div>
 
         </div>
 
@@ -73,7 +112,7 @@
 
 
 <picture>
-    <source srcset="Building84.jpg" media="(max-width: 912px)">
+    <source srcset="Building98.jpg" media="(max-width: 912px)">
     <source srcset="Building21.jpg">
     <img id="cover-image" src="Building21.jpg" style="width: 100%">
 </picture>
@@ -91,7 +130,14 @@
 <div class="container" style="padding-top:50px">
     <div class="row">
         <div  class="col-a-8">
-            <div class="row" style="padding:50px">
+            <div class="row"style="padding:50px; padding-top: 0px">
+                <div class="col-a-12">
+                    <h1 style="text-align: center; font-size:2em">Tax | Consulting | Audit</h1>
+                    <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
+                    <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
+                </div>
+            </div>
+            <div class="row" style="padding:50px; padding-top: 15px">
                 <div class="col-a-12">
                     <h1 style="text-align: center; font-size:2em">About Us</h1>
                     <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. </p>
@@ -110,15 +156,9 @@
 
                 </div>
             </div>
-            <div class="row"style="padding:50px">
-                <div class="col-a-12">
-                    <h1 style="text-align: center; font-size:2em">Tax | Consulting | Audit</h1>
-                    <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
-                    <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
-                </div>
-            </div>
+
         </div>
-        <div class="col-a-4" style="padding:50px; float:left">
+        <div class="col-a-4" style="padding:50px; padding-top: 0px; float:left">
             <div class="row">
                 <div class="col-a-12">
                     <h1 style="text-align: center; font-size:2em">Testimonials</h1>
@@ -130,8 +170,8 @@
     </div>
 </div>
 
-<div class="container-fluid" style="height:300px; background-color: #555555">
-    <div class="row-center" style="padding:75px">
+<div  class="container-fluid" style=" background-color: #555555">
+    <div id="bottom-bar" class="row-center" style="padding:75px">
         <div class="col" style="text-align: center">
             <h8 style="color: white">4325 Windsor Centre Trail, Suite 400
                 Flower Mound, Texas 75028</h8>
