--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div id="main" style="">
                 <span style="font-size:30px;cursor:pointer" onclick="openNav()">
 
-                    <i class="fa fa-address-book-o" style="position: fixed; left: 15px; top: 240px; font-size:40px;color: white; margin-left: -15px;  padding-top: -50px"></i>
+                    <i class="fa fa-address-book-o" style="position: fixed; left: 50%; bottom: 0px;  font-size:40px;color: white; margin-left: -25px;  padding-top: -50px"></i>
 
                 </span>
             </div>
