--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
 <div class="container" style="padding-top:50px">
     <div class="row">
         <div  class="col-a-8">
-            <div class="row"style="padding:50px; padding-top: 0px">
+            <div class="row"style="padding:50px;padding-bottom: 15px; padding-top: 0px">
                 <div class="col-a-12">
-                    <h1 style="text-align: center; font-size:2em">Tax | Consulting | Audit</h1>
+                    <h1 style="text-align: center; font-size:28px">Tax | Consulting | Audit</h1>
                     <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
-                    <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
-                </div>
+                    <!--<p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
+               --> </div>
             </div>
-            <div class="row" style="padding:50px; padding-top: 15px">
+            <div class="row" style="padding:50px; padding-bottom: 15px; padding-top: 15px">
                 <div class="col-a-12">
-                    <h1 style="text-align: center; font-size:2em">About Us</h1>
+                    <h1 style="text-align: center; font-size:28px">About Us</h1>
                     <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. </p>
                     <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. </p>
                     <div class="row" style="padding:50px">
@@ -158,12 +158,162 @@
             </div>
 
         </div>
-        <div class="col-a-4" style="padding:50px; padding-top: 0px; float:left">
+        <div class="col-a-4" style="padding:50px; padding-bottom: 40px; padding-top: 0px; float:left">
             <div class="row">
                 <div class="col-a-12">
-                    <h1 style="text-align: center; font-size:2em">Testimonials</h1>
-                    <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
-                    <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
+                    <h1 style="text-align: center; font-size:28px">Latest News</h1>
+
+
+
+
+                    <div id="article1" style=" margin-top: 40px; width: 100%; height: 275px; background-image: url(capitol-grounds-sm.jpg); background-position: center; text-align: center; background-color: white; background-repeat: no-repeat; ">
+
+
+
+                        <div style="width: 80%; height: 175px;  margin-left: 10%; align-content: center; text-align: center; bottom: 0px">
+
+
+
+
+                        </div>
+
+                        <div id="articleDateBar1" style="width: 115px; height: 25px; background-color: #292b2c;  margin-left: 10%; align-content: center; text-align: center; bottom: 0px">
+
+
+                            <p id="articleDate1" style=" line-height: 10px; color: white; padding-top: 7px; padding-left: 10px; padding-right: 10px">
+
+                                7-13-2017
+
+                            </p>
+
+
+                        </div>
+
+
+                        <div id="articleBox1" style="text-align: center; width: 80%; height: 75px; background-color: #e6e6e6; margin-left: 10%; align-content: center;">
+
+
+
+                            <p id="articleTitle1" style=" line-height: 14px; padding-top: 1.0vw; padding-left: 10px; padding-right: 10px">
+
+                                Special Session to begin soon
+
+                            </p>
+
+                            <p id="articleAuthor1" style="font-size: 8px; text-align: right; margin-top: -20px; padding-right: 10px">
+
+                                Michael Woodruff
+
+                            </p>
+
+
+                        </div>
+
+
+
+
+                    </div>
+
+                    <div id="article2"  style="margin-top: 40px; width: 100%; background-color: white; height: 275px; background-image: url(christmas.jpg); background-position: center; text-align: center; background-repeat: no-repeat; ">
+
+
+
+                        <div style="width: 80%; height: 175px;  margin-left: 10%; align-content: center; text-align: center; bottom: 0px">
+
+
+
+
+                        </div>
+
+                        <div id="articleDateBar2" style="width: 115px; height: 25px; background-color: #292b2c;  margin-left: 10%; align-content: center; text-align: center; bottom: 0px">
+
+
+                            <p id="articleDate2" style=" line-height: 10px; color: white; padding-top: 7px; padding-left: 10px; padding-right: 10px">
+
+                                12-21-2016
+
+                            </p>
+
+
+                        </div>
+
+
+                        <div id="articleBox2" style="text-align: center; width: 80%; height: 75px; background-color: #e6e6e6; margin-left: 10%; align-content: center; text-align: center; bottom: 0px; vertical-align: middle">
+
+
+
+                            <p id="articleTitle2" style=" line-height: 14px; padding-top: 1.0vw; padding-left: 10px; padding-right: 10px">
+
+                                See the 2016 Holiday Newsletter
+
+                            </p>
+
+                            <p id="articleAuthor2" style="font-size: 8px; text-align: right; margin-top: -20px; padding-right: 10px">
+
+                                Michael Woodruff
+
+                            </p>
+
+
+                        </div>
+
+
+
+
+                    </div>
+
+                    <div id="article3" style="margin-top: 40px; width: 100%; background-color: white; height: 275px; background-image: url(calculator.jpg); background-position: center; text-align: center; background-repeat: no-repeat; ">
+
+
+
+                        <div style="width: 80%; height: 175px;  margin-left: 10%; align-content: center; text-align: center; bottom: 0px">
+
+
+
+
+                        </div>
+
+                        <div id="articleDateBar3" style="width: 115px; height: 25px; background-color: #292b2c;  margin-left: 10%; align-content: center; text-align: center; bottom: 0px">
+
+
+                            <p id="articleDate3" style=" line-height: 10px; color: white; padding-top: 7px; padding-left: 10px; padding-right: 10px">
+
+                                9-17-2016
+
+                            </p>
+
+
+                        </div>
+
+
+                        <div id="articleBox3" style="text-align: center; width: 80%; height: 75px; background-color: #e6e6e6; margin-left: 10%; align-content: center; text-align: center; bottom: 0px; vertical-align: middle">
+
+
+
+                            <p id="articleTitle3" style=" line-height: 14px; padding-top: 1.0vw; padding-left: 10px; padding-right: 10px">
+
+                                New website to make services more accessible
+
+                            </p>
+
+                            <p id="articleAuthor3" style="font-size: 8px; text-align: right; margin-top: -20px; padding-right: 10px">
+
+                                Michael Woodruff
+
+                            </p>
+
+
+                        </div>
+
+
+
+
+                    </div>
+
+
+
+
+
                 </div>
             </div>
         </div>
@@ -207,6 +357,77 @@
         $( "#contactInfo").hide().fadeIn(2000);
         $( "#contactInfo2").hide().fadeIn(2000);
     });
+
+
+
+    $("#article1").hover(function() {
+        $("#articleBox1").css("background-color", "#520184");
+        $("#articleTitle1").css("color", "white");
+        $("#articleAuthor1").css("color", "white");
+        $("#articleDateBar1").css("background-color", "#e6e6e6");
+        $("#articleDate1").css("color", "#4d4d4d");
+        $("#article1").css("border", "solid #520184")
+
+
+
+    }, function() {
+
+        $("#articleBox1").css("background-color", "#e6e6e6");
+        $("#articleTitle1").css("color", "#4d4d4d");
+        $("#articleAuthor1").css("color", "#4d4d4d");
+        $("#articleDateBar1").css("background-color", "#292b2c");
+        $("#articleDate1").css("color", "white");
+        $("#article1").css("border", "none")
+
+
+    });
+
+    $("#article2").hover(function() {
+        $("#articleBox2").css("background-color", "#520184");
+        $("#articleTitle2").css("color", "white");
+        $("#articleAuthor2").css("color", "white");
+        $("#articleDateBar2").css("background-color", "#e6e6e6");
+        $("#articleDate2").css("color", "#4d4d4d");
+        $("#article2").css("background-color", "#292b2c");
+        $("#article2").css("border", "solid #520184")
+
+
+    }, function() {
+
+        $("#articleBox2").css("background-color", "#e6e6e6");
+        $("#articleTitle2").css("color", "#4d4d4d");
+        $("#articleAuthor2").css("color", "#4d4d4d");
+        $("#articleDateBar2").css("background-color", "#292b2c");
+        $("#articleDate2").css("color", "white");
+        $("#article2").css("border", "none")
+
+    });
+
+    $("#article3").hover(function() {
+        $("#articleBox3").css("background-color", "#520184");
+        $("#articleTitle3").css("color", "white");
+        $("#articleAuthor3").css("color", "white");
+        $("#articleDateBar3").css("background-color", "#e6e6e6");
+        $("#articleDate3").css("color", "#4d4d4d");
+        $("#article3").css("background-color", "#292b2c");
+        $("#article3").css("border", "solid #520184")
+
+
+    }, function() {
+
+        $("#articleBox3").css("background-color", "#e6e6e6");
+        $("#articleTitle3").css("color", "#4d4d4d");
+        $("#articleAuthor3").css("color", "#4d4d4d");
+        $("#articleDateBar3").css("background-color", "#292b2c");
+        $("#articleDate3").css("color", "white");
+        $("#article3").css("border", "none")
+
+    });
+
+
+
+
+
 
 </script>
 
