--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div id="main" style="">
                 <span style="font-size:30px;cursor:pointer" onclick="openNav()">
 
-                    <i class="fa fa-address-book-o" style="position: fixed; left: 50%; bottom: 0px;  font-size:40px;color: white; margin-left: -25px;  padding-top: -50px"></i>
+                    <i class="fa fa-address-book-o" style="position: fixed; bottom: 15px; left: -3px; margin-left: 0px; margin-right: -20px; margin-top: 10px; margin-bottom: 16px; padding-bottom: 10px; font-size:40px;color: white;"></i>
 
                 </span>
             </div>
