--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <picture>
     <source srcset="Building98.jpg" media="(max-width: 912px)">
     <source srcset="Building21.jpg">
-    <img id="cover-image" src="Building21.jpg" style="width: 100%">
+    <img id="cover-image" src="Building21.jpg" style="width: 100vw">
 </picture>
 
 <!--
@@ -409,7 +409,7 @@
         $("#articleAuthor3").css("color", "white");
         $("#articleDateBar3").css("background-color", "#e6e6e6");
         $("#articleDate3").css("color", "#4d4d4d");
-     
+
         $("#article3").css("border", "solid #520184")
 
 
