--- a/directory/index.html
+++ b/directory/index.html
@@ -68,14 +68,9 @@
     var dict = {
         0: ["Dustin Johnson" ,"Manager", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."],
         1: ["Jake Smith" ,"Accountant", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."],
-        2: ["Noah Brown", "Accountant", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."],
-        3: ["Noah Brown", "Accountant", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."],
-        4: ["Noah Brown", "Accountant", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."],
-        5: ["Noah Brown", "Accountant", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."]
-        6: ["Noah Brown", "Accountant", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."]
-        7: ["Noah Brown", "Accountant", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."]
-        8: ["Noah Brown", "Accountant", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."]
-
+        2: ["Sandra Jones", "Accountant", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."],
+        3: ["Neal Tyson", "Accountant", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."],
+        4: ["Noah Brown", "Accountant", "HeadShot.png", "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga."]
     }
 
 
@@ -90,35 +85,25 @@
         return row
     }
 
-    var makeName = (name) => {
-        var p = document.createElement('p')
-        p.innerHTML = name
 
-        var column = document.createElement('div')
-        column.className = "col name"
-        column.appendChild(p)
+    var makeNamePosition = (name, position) => {
+        var h3 = document.createElement('h3')
+        var p = document.createElement('p')
+        h3.innerHTML = name
+        h3.id = name.toString()
+        p.innerHTML = position
+
+        var col = document.createElement('div')
+        col.className = "col name"
+        col.appendChild(h3)
+        col.appendChild(p)
 
         var row = document.createElement('div')
         row.className = "row"
-        row.appendChild(column)
-
+        row.appendChild(col)
         return row
     }
 
-    var makePosition = (position) => {
-        var p = document.createElement('p')
-        p.innerHTML = name
-
-        var column = document.createElement('div')
-        column.className = "col position"
-        column.appendChild(p)
-
-        var row = document.createElement('div')
-        row.className = "row"
-        row.appendChild(column)
-
-        return row
-    }
     var makeBio = (bio) => {
         var p = document.createElement('p')
         p.innerHTML = bio
@@ -140,7 +125,7 @@
     window.onload = () => {
         var insertDiv = document.getElementById("mainDiv")
         var rowElement = document.createElement("div")
-        rowElement.className = "row justify-content-center"
+        rowElement.className = "row"
 
         for (var key in dict) {
 
@@ -152,30 +137,43 @@
 
 
             var imgElement = makeImage(imgsrc)
-            var nameElement = makeName(name)
+            var nameElement = makeNamePosition(name, position)
             var bioElement = makeBio(bio)
-            var positionElement = makeBio(position)
             var mainElement = document.getElementById("mainDiv")
 
             var colElement = document.createElement('div')
-            colElement.className = "col-4 square"
+            colElement.className = "col-md-4 col-sm-12 square"
             colElement.appendChild(imgElement)
             colElement.appendChild(nameElement)
-            colElement.appendChild(positionElement)
             colElement.appendChild(bioElement)
 
 
-
-            if (((key+1) % 3 == 0 && key != 0) || key+1 == Object.keys(dict).length) {
-
-                rowElement.appendChild(colElement)
-                mainElement.appendChild(rowElement)
-                rowElement = document.createElement('div')
-                rowElement.className = "row justify-content-center"
-            } else {
-                rowElement.appendChild(colElement)
-            }
+            rowElement.appendChild(colElement)
         }
+        mainElement.appendChild(rowElement)
+        var asdf = document.getElementById(name)
+
+        asdf.onmouseover = function(){
+            document.getElementById("Dustin Johnson").style.color = "purple"
+        }
+//            for (var key in dict) {
+//                var name = dict[key][0].toString()
+//                var position = dict[key][1]
+//                var imgsrc = dict[key][2]
+//                var bio = dict[key][3]
+//                var asdf = document.getElementById(name)
+//                asdf.onmouseover = function(){
+//                    document.getElementById(name).style.color = "purple"
+//                }
+//                asdf.onmouseout = function(){
+//                    document.getElementById(name).style.color = "black"
+//                }
+////                document.addEventListener('mouseover', () => {
+////                    document.getElementById(name).style.color = "purple"
+////                })
+//
+//            }
+
     }
 
 </script>
