--- a/index.html
+++ b/index.html
@@ -133,17 +133,31 @@
         <div  class="col-a-8">
             <div class="row"style="padding:50px;padding-bottom: 15px; padding-top: 0px">
                 <div class="col-a-12">
-                    <h1 style="text-align: center; font-size:28px">Tax | Consulting | Audit</h1>
+                    <div id="titleBanner1" class="titleBanner" style="width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px">
+
+
+                        Tax | Audit | Consulting
+
+
+                    </div>
+                    <!--<h1 style="text-align: center; font-size:28px">Tax | Consulting | Audit</h1>-->
                     <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
                     <!--<p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
                --> </div>
             </div>
             <div class="row" style="padding:50px; padding-bottom: 15px; padding-top: 15px">
                 <div class="col-a-12">
-                    <h1 style="text-align: center; font-size:28px">About Us</h1>
+                    <div class="titleBanner" style="width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px">
+
+
+                        About Us
+
+
+                    </div>
+                    <!--<h1 style="text-align: center; font-size:28px">About Us</h1>-->
                     <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. </p>
                     <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. </p>
-                    <div class="row" style="padding:50px; padding-top: 15px;">
+                    <div class="row" style="padding:50px; padding-top: 15px; text-align: center; align-content: center">
 
 
                         <img src="people2.jpg" style="width: 125%; height: 125%">
@@ -169,7 +183,14 @@
         <div class="col-a-4" style="padding:50px; padding-bottom: 40px; padding-top: 0px; float:left">
             <div class="row">
                 <div class="col-a-12">
-                    <h1 style="text-align: center; font-size:28px">Latest News</h1>
+                    <div class="titleBanner" style="width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px">
+
+
+                        Latest News
+
+
+                    </div>
+                    <!--<h1 style="text-align: center; font-size:28px">Latest News</h1>-->
 
 
 
@@ -369,12 +390,19 @@
 
 
     $("#article1").hover(function() {
+
+
+
+
+
+
         $("#articleBox1").css("background-color", "#520184");
         $("#articleTitle1").css("color", "white");
         $("#articleAuthor1").css("color", "white");
         $("#articleDateBar1").css("background-color", "#e6e6e6");
         $("#articleDate1").css("color", "#4d4d4d");
         $("#article1").css("border", "solid #520184")
+
 
 
 
