--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
                     <a href="post/index.html?postid=1"; style="text-decoration: none">
 
-                    <div id="article1" style="box-shadow: 2.5px 2.5px 5px #666666; margin-top: 40px; width: 100%; height: 275px; background-image: url(capitol-grounds-sm.jpg); background-position: center; text-align: center; background-color: white; background-repeat: no-repeat; ">
+                    <div id="article1" style="background-size: cover;box-shadow: 2.5px 2.5px 5px #666666; margin-top: 40px; width: 100%; height: 275px; background-image: url(capitol-grounds-sm.jpg); background-position: center; text-align: center; background-color: white; background-repeat: no-repeat; ">
 
 
 
@@ -277,7 +277,7 @@
 
                     <a href="post/index.html?postid=2" style="text-decoration: none">
 
-                    <div id="article2"  style="box-shadow: 2.5px 2.5px 5px #666666;margin-top: 40px; width: 100%; background-color: white; height: 275px; background-image: url(christmas.jpg); background-position: center; text-align: center; background-repeat: no-repeat; ">
+                    <div id="article2"  style="background-size: cover;box-shadow: 2.5px 2.5px 5px #666666;margin-top: 40px; width: 100%; background-color: white; height: 275px; background-image: url(christmas.jpg); background-position: center; text-align: center; background-repeat: no-repeat; ">
 
 
 
@@ -329,7 +329,7 @@
 
                     <a href="post/index.html?postid=3" style="text-decoration: none">
 
-                    <div id="article3" style="box-shadow: 2.5px 2.5px 5px #666666;margin-top: 40px; width: 100%; background-color: white; height: 275px; background-image: url(calculator.jpg); background-position: center; text-align: center; background-repeat: no-repeat; ">
+                    <div id="article3" style="background-size: cover;box-shadow: 2.5px 2.5px 5px #666666;margin-top: 40px; width: 100%; background-color: white; height: 275px; background-image: url(calculator.jpg); background-position: center; text-align: center; background-repeat: no-repeat; ">
 
 
 
